--- a/style.css
+++ b/style.css
@@ -110,14 +110,16 @@ a{
 }
 button{
   background-color: #11999E;
-  border-radius: 12px;
-  padding: 15px;
+  border-radius: 17px;
+  padding: 25px;
   margin: 50px auto 50px auto;
   color: white;
+  font-family: "Merriweather", sans-serif;
+  font-size: 1.3rem;
 }
 .bottom-container{
   background-color: #66BFBF;
-  padding: 30px;
+  padding: 40px;
 }
 .footer-link{
   margin-right: 50px;
@@ -131,4 +133,52 @@ button{
   font-family: "Merriweather", sans-serif;
   font-size: 1rem;
   padding-top: 0;
+}
+
+@media(min-width: 407px){
+
+  h1{
+    font-size: 550%;
+  }
+
+  h2{
+    font-size: 3.2rem;
+  }
+
+  .hel{
+    font-size: 3.5rem;
+  }
+
+  .hello{
+    font-size: 220%;
+  }
+
+  h3{
+    font-size: 200%;
+  }
+
+  p{
+    font-size: 2.8rem;
+  }
+
+  .get{
+    font-size: 3.5rem;
+  }
+  
+  .bottom-con{
+    font-size: 2rem;
+  }
+
+  .business{
+    font-size: 200%;
+  }
+
+  .footer-link{
+    font-size: 2.2rem;
+  }
+
+  .foot{
+    font-size: 2rem;
+  }
+
 }
